--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <a href="../PrimerProyecto_6/index5.html" 
+        <a href="./index.html" 
         class="vinculo">
             <h1 class="titulo">
                 IES Ana Luisa<span>Freelancer</span>
