--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- <a href="../PrimerProyecto_6/proyectotabla.html">
                 Proyectos
             </a> -->
-            <a href="#">Contacto</a>
+            <a href="#form">Contacto</a>
         </nav>        
     </div>
     <hr>
@@ -68,7 +68,7 @@
                 </p>
             </div>
             
-            <a href="#" class="boton1">Contactar</a>
+            <a href="#form" class="boton1">Contactar</a>
         </div>
     </section>
     <hr>
@@ -216,7 +216,7 @@
         <section class="contacto1">
             <h2 class="contacto2">Contacto</h2>
 
-            <form class="formulario">
+            <form class="formulario" id="form">
                 <fieldset>
                     <legend>
                         Contáctanos llenando todos los campos.
